# zenodo-rdm

./: Dockerfile  Pipfile  README.md  benchmarking.py  copy-bench.sh  invenio.cfg  package-lock.json  pyproject.toml  requirements.in  requirements.txt
benchmark/: locustfile.py
migrator/: README.md  migrate.sh  streams.yaml
migrator/scripts/: create_missing_indices.sql  gen_create_indices.sql  oauth2server_clients_dump.sql  oauth2server_tokens_dump.sql  update_sequences.sql
migrator/tests/actions/: conftest.py
migrator/tests/actions/drafts/: test_drafts_actions_match.py
migrator/tests/actions/drafts/testdata/: media-file-upload.jsonl  update2.jsonl
migrator/tests/actions/github/: test_github_actions_match.py
migrator/tests/actions/github/testdata/: release_process2.jsonl
migrator/tests/actions/ignored/: test_ignored_actions_match.py
migrator/tests/actions/ignored/testdata/: bucket-noop.jsonl  repo_update.jsonl
migrator/tests/actions/oauth/: test_oauth_actions_stream.py
migrator/tests/actions/users/: test_user_actions_stream.py
migrator/tests/extract/: test_kafka_extract.py
migrator/tests/transform/: test_record_transform.py  test_request_transform.py
migrator/zenodo_rdm_migrator/actions/transform/: drafts.py  files.py  github.py  ignored.py  oauth.py  users.py
migrator/zenodo_rdm_migrator/extract/: kafka.py
migrator/zenodo_rdm_migrator/transform/entries/: communities.py  parents.py
site/: setup.cfg
site/zenodo_rdm/: config.py  providers.py
site/zenodo_rdm/legacy/serializers/schemas/: files.py
